--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 black==21.12b0
 click==8.0.3
 Django==3.1.14
+django-crispy-forms==1.9.2
 flake8==4.0.1
 isort==5.10.1
 mccabe==0.6.1
