--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,18 +1,28 @@
 asgiref==3.4.1
 black==21.12b0
+certifi==2021.10.8
+charset-normalizer==2.0.10
 click==8.0.3
+defusedxml==0.7.1
 Django==3.1.14
+django-allauth==0.42.0
 django-crispy-forms==1.9.2
 flake8==4.0.1
+idna==3.3
 isort==5.10.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
+oauthlib==3.1.1
 pathspec==0.9.0
 platformdirs==2.4.1
 psycopg2-binary==2.8.5
 pycodestyle==2.8.0
 pyflakes==2.4.0
+python3-openid==3.2.0
 pytz==2021.3
+requests==2.27.1
+requests-oauthlib==1.3.0
 sqlparse==0.4.2
 tomli==1.2.3
 typing-extensions==4.0.1
+urllib3==1.26.8
