--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -4,12 +4,17 @@ certifi==2021.10.8
 charset-normalizer==2.0.10
 click==8.0.3
 defusedxml==0.7.1
+dj-database-url==0.5.0
+dj-email-url==1.0.4
 Django==3.1.14
 django-allauth==0.42.0
+django-cache-url==3.2.3
 django-crispy-forms==1.9.2
+environs==8.0.0
 flake8==4.0.1
 idna==3.3
 isort==5.10.1
+marshmallow==3.14.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 oauthlib==3.1.1
@@ -18,6 +23,7 @@ platformdirs==2.4.1
 psycopg2-binary==2.8.5
 pycodestyle==2.8.0
 pyflakes==2.4.0
+python-dotenv==0.19.2
 python3-openid==3.2.0
 pytz==2021.3
 requests==2.27.1
