--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -19,6 +19,7 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
 oauthlib==3.1.1
 pathspec==0.9.0
+Pillow==7.2.0
 platformdirs==2.4.1
 psycopg2-binary==2.8.5
 pycodestyle==2.8.0
